--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 body {
-  color: #422d5d;
+  background-color: #422d5d;
   margin: 0;
 }
 
